# QTVTK-Kitware-VS2013-Integration

./: QVtkTest.vcxproj  README.txt  libs.txt  main.cpp  qrc_qvtktest.cpp  qvtktest.cpp  qvtktest.h  qvtktest.qrc  qvtktest.ui  ui_qvtktest.h
VTKVS2013/: CMakeLists.txt
